--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+# Environment
+python-dotenv
 
-#Not using, just a reference
-pip install python-dotenv
-pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client
-pip install piexif
+# Google API
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
+
+# Metadata EXIF
+piexif
